--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "connect-mongo": "^2.0.3",
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6"
   },
