--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "node server.js",
     "start-server": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 0",
-    "heroku-postbuild": "cd client && rm -rf node_modules && npm install && npm start && cd ../ && rm -rf node_modules && npm install -g npm@latest && npm i core-util-is && npm install"
+    "heroku-postbuild": "rm -rf node_modules && npm install -g npm@latest && npm i core-util-is && npm install"
   },
   "repository": {
     "type": "git",
