--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "start": "node server.js",
     "start-server": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 0",
-    "heroku-postbuild": "rm -rf node_modules && npm install -g npm@latest && npm i core-util-is && npm install"
+    "heroku-postbuild": "npm i core-util-is && npm ci"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ParadoxInfinite/DiscussionForum.git"
   },
   "engines": {
-    "node": "v12.18.1"
+    "node": "v16.1.0"
   },
   "author": "",
   "license": "ISC",
